# DP3

./: .clang-format  .cmake-format.py  .gitignore  .gitlab-ci.astron.yml  .gitlab-ci.common.yml  .gitlab-ci.ska.yml  .gitlab-ci.wheels.yml  .gitlab-ci.yml  .gitmodules  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  cmakecommand.txt  lofarconf.in  package.dox  readthedocs.yml  setup.py  unittests.sh.in
AOFlaggerStep/test/: CMakeLists.txt  tAOFlaggerStep.cc  tAOFlaggerStep.run  tAOFlaggerStep.sh
CPack/: CMakeLists.txt  DetermineEnabledAVXFeatures.cmake  DetermineTargetCPU.cmake
CS1_pp_lib/test/: CS1_IDPPP.log_prop  CS1_IDPPP.parset  Makefile.am  test_flaggers.cc
DPPP/: AddNoise.cc  AddNoise.h  AddNoiseLBA.cc  AddNoiseLBA.h  Apply.cc  Apply.h  ApplyBeam.cc  ApplyBeam.h  ApplyBeam.tcc  ApplyCal.cc  ApplyCal.h  Averager.cc  Averager.h  BDAAverager.cc  BDAAverager.h  BDABuffer.cc  BDABuffer.h  BDACompressor.cc  BDACompressor.h  BDAIntervalBuffer.cc  BDAIntervalBuffer.h  BDAMS.cc  BDAMS.h  Baseline.h  BaselineSelection.cc  BaselineSelection.h  CMakeLists.txt  CalculateSomething.cc  CalculateSomething.h  ColumnReader.cc  ColumnReader.h  Counter.cc  Counter.h  Cursor.h  CursorUtilCasa.h  DPBuffer.cc  DPBuffer.h  DPInfo.cc  DPInfo.h  DPInput.cc  (+121 more)
DPPP/etc/: CMakeLists.txt
DPPP/include/: Makefile.am
DPPP/scripts/: CS1_Offline_pipeline_control.py  CS1_Offline_pipeline_node.py  Create_DPPP_Config.py  GuessDataset.py
DPPP/share/: CMakeLists.txt  HBAdefault  LBAdefault  LOFAR-HBA-default.rfis  LOFAR-LBA-default.rfis
DPPP/src/: AORFlagger.cc  Apply.cc  Apply.h  ApplyBeam.cc  ApplyBeam.tcc  ApplyCal.cc  ApplyCal.h  AverageInfo.cc  Averager.cc  BBSExpr.cc  BandpassCorrector.cc  BaselineSelection.cc  BaselineSelection.h  CMakeLists.txt  ComplexMedianFlagger.cc  ComplexMedianFlagger2.cc  Counter.cc  DPBuffer.cc  DPInfo.cc  DPInfo.h  DPInput.cc  DPInput.h  DPLogger.cc  DPPP.cc  DPRun.cc  DPStep.cc  DPStep.h  DataBuffer.cc  DataSquasher.cc  DemixInfo.cc  DemixInfo.h  DemixWorker.cc  DemixWorker.h  Demixer.cc  Demixer.h  DemixerNew.cc  DemixerNew.h  DummyStep.cc  DummyStep.h  EstimateMixed.cc  (+76 more)
DPPP/test/: CMakeLists.txt  CS1_IDPPP.parset  Makefile.am  runtests.cc  tAORFlagger.cc  tApplyBeam.run  tApplyBeam.run_tmpl  tApplyBeam.tab.tgz  tApplyBeam_ref  tApplyCal.cc  tApplyCal.in_parmdb.tgz  tApplyCal.run  tApplyCal.sh  tApplyCal2.run  tApplyCalH5.cc  tApplyCalH5.run  tApplyCalH5.sh  tApplyCal_parmdbscript  tAverager.cc  tAverager.sh  tBaselineSelection.cc  tDemix.run  tDemix.run_tmpl  tDemix.sh  tDemixer.cc  tFilter.cc  tGainCal.run  tGainCal.tab.tgz  tGainCalH5Parm.run  tGainCal_ref  tGridInterpolate.cc  tH5Parm.cc  tH5Parm.sh  tMedFlagger.cc  tMedFlagger.sh  tMedian.cc  tMedian.sh  tMirror.cc  tMirror.sh  tMultiApplyCal.sh  (+32 more)
DPPP_AOFlag/: AOFlaggerStep.cc  AOFlaggerStep.h  CMakeLists.txt  Register.cc
DPPP_AOFlag/src/: AOFlaggerStep.cc  AOFlaggerStep.h  CMakeLists.txt  Register.cc  Register.h  SlidingFlagger.cc  SlidingFlagger.h
DPPP_AOFlag/test/: CMakeLists.txt  tAOFlaggerStep.cc  tAOFlaggerStep.run
DPPP_DDECal/: CMakeLists.txt  Constraint.cc  DDECal.cc  DDECal.h  KLFitter.h  KernelSmoother.h  MultiDirSolver.h  PiercePoint.cc  PiercePoint.h  Register.cc  RotationAndDiagonalConstraint.cc  RotationAndDiagonalConstraint.h  RotationConstraint.cc  ScreenConstraint.cc  ScreenConstraint.h  SmoothnessConstraint.cc  SmoothnessConstraint.h  TECConstraint.cc
DPPP_DDECal/src/: CMakeLists.txt  Constraint.cc  DDECal.cc  DDECal.h  KLFitter.cc  MultiDirSolver.cc  MultiDirSolver.h  PiercePoint.cc  Register.cc  Register.h  RotationAndDiagonalConstraint.cc  RotationConstraint.cc  RotationConstraint.h  ScreenConstraint.cc  ScreenConstraint.h  SmoothnessConstraint.cc  SmoothnessConstraint.h  Stopwatch.cc  TECConstraint.cc  TECConstraint.h  multidirsolver.cc  screenfitter.h
DPPP_DDECal/test/: CMakeLists.txt  tDDECal.run  tDDECal_ref  tRotationConstraint.cc  tRotationConstraint.sh
DPPP_Interpolate/: CMakeLists-standalone.txt  CMakeLists.txt  Interpolate.cc  Interpolate.h  lane.h
DPPP_Interpolate/src/: CMakeLists.txt  Interpolate.cc
DPPP_Interpolate/test/: CMakeLists.txt  tInterpolateStep.cc  tInterpolateStep.sh
DPPP_SageCal/: CMakeLists.txt
DPPP_SageCal/src/: CMakeLists.txt  Register.cc  SageCal.cc
PythonDPPP/: CMakeLists.txt  DPStepBase.cc  DPStepBase.h  PyDPStep.cc  PyDPStep.h  PyDPStepImpl.h  PythonDPPP.cc  PythonStep.cc  PythonStep.h  __init__.py  dummystep.py  idgcalstep.py  idgwindow.py  parameterset.cc  pydppp.cc  pydpstep.py  testmydpstep.cc
PythonDPPP/src/: CMakeLists.txt  DPStepBase.cc  PythonDPPP.cc  PythonStep.cc  __init__.py
PythonDPPP/test/: CMakeLists.txt  DPPP.parset  tPythonStep.py  (+3 more)
SPWCombine/: CMakeLists.txt  CS1_SPWCombine.spec.in  Combiner.cc  CombinerProcessControl.cc  CombinerProcessControl.h  Makefile.am  SPWCombine.cc  SPWCombine.h  SPWCombine.spec.in  configure.in  package.dox
base/: AartfaacSubtableWriter.cc  AartfaacSubtableWriter.h  Apply.cc  Apply.h  BDABuffer.cc  BDABuffer.h  BDAIntervalBuffer.cc  BDAIntervalBuffer.h  Baseline.h  BaselineSelection.cc  BaselineSelection.h  BdaBuffer.cc  BdaBuffer.h  CMakeLists.txt  CalType.cc  CalType.h  ComponentInfo.cc  ComponentInfo.h  Cursor.h  CursorUtilCasa.h  DP3.cc  DP3.h  DPBuffer.cc  DPBuffer.h  DPInfo.cc  DPInfo.h  DPLogger.cc  DPLogger.h  DemixInfo.cc  DemixInfo.h  DemixWorker.cc  DemixWorker.h  Direction.h  EstimateMixed.cc  EstimateMixed.h  EstimateMixedLBFGS.cc  EstimateNew.cc  EstimateNew.h  Exceptions.h  FlagCounter.cc  (+53 more)
benchmarks/: CMakeLists.txt  MatrixComplexDouble2x2.cc  MatrixComplexFloat2x2.cc  MatrixComplextFloat2x2.cpp  VectorComplexDouble2.cc  VectorComplexFloat2.cc
docs/: CMakeLists.txt  Makefile  commands.rst  conf.py  conf.py.in  index.rst  parser.py.patch  requirements-docs.txt  rst_utils.py.patch
pythondp3/: CMakeLists.txt  PyDpBuffer.cc  PyDpBuffer.h  PyDpInfo.cc  PyEveryBeam.cc  PyFields.cc  PyStep.cc  PyStep.h  PyStepImpl.h  __init__.py  parameterset.cc  pydp3.cc  pydpbuffer.cc  pydpinfo.cc  pyfitters.cc  utils.h
(+1394 files in other folders)
